# FFmpegSample_android

./: gradle.properties  readme.md  settings.gradle
AVcpp/: build.gradle
AVcpp/src/androidTest/java/com/lucas/avcpp/: ExampleInstrumentedTest.kt
AVcpp/src/main/: AndroidManifest.xml
AVcpp/src/main/cpp/: CMakeLists.txt  av_cpp_sample.cpp
AVcpp/src/main/cpp/src/: Jni_util.cpp  audio_encode.cpp  audio_record.cpp  audio_resample.cpp  video_record.cpp
AVcpp/src/main/cpp/src/include/: Jni_util.hpp  audio_encode.hpp  audio_resample.hpp  log.hpp  socket_client.hpp  socket_server.hpp  video_record.hpp
AVcpp/src/main/java/com/lucas/avcpp/: AvCpp.kt
AVcpp/src/test/java/com/lucas/avcpp/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/lucas/ffmpegsample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: audio_48000_2_s16le.pcm
app/src/main/java/com/lucas/ffmpegsample/: MainActivity.kt
app/src/test/java/com/lucas/ffmpegsample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
